TESTING:dash library

--- a/main/dashboard/templates/code/dashboard.html
+++ b/main/dashboard/templates/code/dashboard.html
@@ -288,10 +288,10 @@
 <!-- GRAPH REPRESENTATION -->
 </div><!-- this div must be here its a part of the container in the top -->
 <div class="cotainer">
-<div class="whole_graph row row-cols-1 row-cols-md-2 g-4">
+<div class="whole_graph row row-cols-1 row-cols-md-4 g-4">
 
 {% for graph in graph_chart%}
-<div class="col maina border border-secondary rounded border-1 g-2" style="background:#212529">
+<div class="col maina border border-secondary rounded border-1 " style="background:#212529">
 <div class="" style="background:#212529">
 <!-- <div class="graph m-1 p-3 my-5 border border-secondary rounded border-1" style="background:#212529"> -->
 
