--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-expand-lg ">
         <div class="container-start" style="background:#282828">
           <div class="navbar-nav">
-            <div class="row">
+            <div class="row align-items-center">
               <div class="col-auto align-bottom">
                 <a class="nav-link active" href="#">Hi {{request.user.employer.user_name}},{{request.user.employer.last_name}}</a>
               </div>
@@ -48,10 +48,10 @@
 </div>
 
 
-<div class="row">
+<div class="row" style="margin-left:8rem">
 
 
-<div class="col-2">
+<div class="col-auto">
 
 
 <div class="offcanvas offcanvas-start " id="small_off_canvas" data-bs-scroll="true" data-bs-backdrop="false" style="width:85px; background:#242526; " tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
